5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1747_3096.log
== TEST (2019-05-16 10:25:21) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n >0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:25:56) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n >0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:16) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n >0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:51) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n >0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:00) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n >0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:15) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n >0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:28) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n >0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:28:01) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n >0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:42) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:49) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:45) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:31:02) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:31:05) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:31:09) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:31:18) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:31:22) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:06) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n < 0:
		s = s + 0
	elif n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:35) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n < 0:
		s = s + 0
	elif n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
	print(s)
			
-- OUTPUT:
20
35
45
52
58
63
67
70
72
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:33:22) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n < 0:
		s = s + 0
	elif n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif 4<=n<=10:
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:35:18) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n < 0:
		s = s + 0
	elif n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif (4<=n) and (n<=10)
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- ERROR:
File "XXXX", line 13
    elif (4<=n) and (n<=10)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:35:25) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n < 0:
		s = s + 0
	elif n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif (4<=n) and (n<=10):
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:35:45) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n < 0:
		s = s + 0
	elif n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif (4<=n) and (n<=10):
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	print(s)
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
20
35
45
52
58
63
67
70
72
73
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:36:52) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n < 0:
		s = s - 10
	elif n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif (4<=n) and (n<=10):
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	print(s)
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
20
35
45
52
58
63
67
70
72
73
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:37:17) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n < 0:
		s = s - 10
	elif n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif (4<=n) and (n<=10):
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:37:50) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n < 0:
		s = s - 10
	elif n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif (4<=n) and (n<=10):
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	print(s)
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
20
35
45
52
58
63
67
70
72
73
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:38:32) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n < 0:
		a = s - 0
	elif n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif (4<=n) and (n<=10):
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:38:50) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n < 0:
		a = 0
	elif n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif (4<=n) and (n<=10):
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:39:12) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n < 0:
		a = 0
	elif n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif (4<=n) and (n<=10):
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	print(s)
	n = int(input("posicao: "))
print(s)
			
-- OUTPUT:
20
35
45
52
58
63
67
70
72
73
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:40:38) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n < 0:
		a = 0
	elif n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif (4<=n) and (n<=10):
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	print(s)
	n = int(input("posicao: "))
print(s)
			
-- EXECUTION TIME:
0.159561
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
73
---- user output:
20
35
45
52
58
63
67
70
72
73
73
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
135
---- user output:
20
40
60
60
60
75
90
105
115
125
135
135
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
0
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:40:47) 
-- CODE:
n = int(input("posicao: "))
s = 0
while n!=0:
	if n < 0:
		a = 0
	elif n > 0:
		if n == 1:
			a = 20
		elif n == 2:
			a = 15
		elif n == 3:
			a = 10
		elif (4<=n) and (n<=10):
			a = 11 - n
		elif n>10:
			a = 0
	s = s + a
	n = int(input("posicao: "))
print(s)
			
-- EXECUTION TIME:
0.191213
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
73
---- user output:
73
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
135
---- user output:
135
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
